-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u291, jfx17
-
Component/s: javafx
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8262803 | jfx11.0.11 | Arun Joseph | P2 | Resolved | Fixed | |
| JDK-8262322 | 8u301 | Arun Joseph | P2 | Resolved | Fixed | b01 |
| JDK-8262514 | 8u291 | Arun Joseph | P2 | Closed | Fixed | b07 |
I ran into this while doing manual testing of the WebKit 610.2 update for JDK-8259635 on Ubuntu 20.04.
To reproduce, do the following on Linux:
1. Load any WebPage that will not fit vertically, and will use vertical scrolling. For example:
$ java HelloWebView https://github.com/openjdk/jfx/blob/master/CONTRIBUTING.md
2. Try scrolling with a track pad or by clicking somewhere in the scrollbar track.
BUG: No scrolling will occur.
You can still scroll by dragging the scrollbar thumb.
This only occurs on Linux. It works correctly on Mac and Windows.
To reproduce, do the following on Linux:
1. Load any WebPage that will not fit vertically, and will use vertical scrolling. For example:
$ java HelloWebView https://github.com/openjdk/jfx/blob/master/CONTRIBUTING.md
2. Try scrolling with a track pad or by clicking somewhere in the scrollbar track.
BUG: No scrolling will occur.
You can still scroll by dragging the scrollbar thumb.
This only occurs on Linux. It works correctly on Mac and Windows.
- backported by
-
JDK-8262322 [Linux] WebView no longer reacts to some mouse events
-
- Resolved
-
-
JDK-8262803 [Linux] WebView no longer reacts to some mouse events
-
- Resolved
-
-
JDK-8262514 [Linux] WebView no longer reacts to some mouse events
-
- Closed
-
- relates to
-
JDK-8259635 Update to 610.2 version of WebKit
-
- Resolved
-
(1 links to)