8260257: [Linux] WebView no longer reacts to some mouse events

Reviewed-by: kcr, jvos